fixed the font being hard to see on parrlaxx scorll

--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,9 @@
     font-size: 80px;
     color: white !important;
 }
+
+.white
+{
+    color: white;
+    text-shadow: 1px 1px #111111;
+}
